--- a/ThaiTechEventsCalendar/Storyboards/Base.lproj/Main.storyboard
+++ b/ThaiTechEventsCalendar/Storyboards/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14092" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nVx-qX-9b9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nVx-qX-9b9">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14081.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -40,7 +40,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="lcq-jv-yKf" kind="relationship" relationship="viewControllers" id="D50-Tm-OVL"/>
-                        <segue destination="gHw-RN-aXR" kind="relationship" relationship="viewControllers" id="Fuo-CT-SwO"/>
+                        <segue destination="5KN-Yi-qeb" kind="relationship" relationship="viewControllers" id="Fuo-CT-SwO"/>
                         <segue destination="qHJ-Re-czd" kind="relationship" relationship="viewControllers" id="7XK-Rw-Yog"/>
                     </connections>
                 </tabBarController>
@@ -110,22 +110,6 @@
             </objects>
             <point key="canvasLocation" x="421" y="769"/>
         </scene>
-        <!--Calendar-->
-        <scene sceneID="Bvq-Gl-tpn">
-            <objects>
-                <viewController title="Calendar" id="gHw-RN-aXR" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="CRt-AP-3h1">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="3CI-AS-mIc"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Calendar" image="calendar" id="6Vj-V5-j7i"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vEr-Pl-Y5t" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1743" y="1421"/>
-        </scene>
         <!--Settings-->
         <scene sceneID="BRs-QO-w2L">
             <objects>
@@ -136,9 +120,18 @@
             </objects>
             <point key="canvasLocation" x="-1743" y="1917"/>
         </scene>
+        <!--Calendar-->
+        <scene sceneID="lM3-q7-yj4">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Calendar" id="5KN-Yi-qeb" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="ogP-WZ-1pb"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mbI-jy-0DG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1743" y="1421"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="calendar" width="22" height="22"/>
         <image name="list" width="19" height="14"/>
     </resources>
 </document>
