--- a/ThaiTechEventsCalendar/Storyboards/Calendar.storyboard
+++ b/ThaiTechEventsCalendar/Storyboards/Calendar.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VSd-vl-tac">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14092" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VSd-vl-tac">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14081.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +15,7 @@
             <objects>
                 <navigationController id="VSd-vl-tac" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LUY-qJ-sOU">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -31,12 +31,15 @@
             <objects>
                 <viewController title="Calendar" id="gHw-RN-aXR" customClass="CalendarViewController" customModule="ThaiTechEventsCalendar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CRt-AP-3h1">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0O1-cG-0y3" customClass="CVCalendarView" customModule="CVCalendar">
-                                <rect key="frame" x="0.0" y="104" width="375" height="563"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="128" width="375" height="250"/>
+                                <color key="backgroundColor" red="0.96840542554855347" green="0.97255235910415649" blue="0.97656112909317017" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="3mh-MI-ruu"/>
+                                </constraints>
                                 <connections>
                                     <outlet property="animatorDelegate" destination="gHw-RN-aXR" id="tQI-r0-0gL"/>
                                     <outlet property="calendarAppearanceDelegate" destination="gHw-RN-aXR" id="uWC-wm-3dv"/>
@@ -44,8 +47,8 @@
                                 </connections>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N6t-2k-ceT" customClass="CVCalendarMenuView" customModule="CVCalendar">
-                                <rect key="frame" x="0.0" y="64" width="375" height="40"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="40"/>
+                                <color key="backgroundColor" red="0.96840542554855347" green="0.97255235910415649" blue="0.97656112909317017" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="JXw-1H-dqV"/>
                                 </constraints>
@@ -53,16 +56,27 @@
                                     <outlet property="menuViewDelegate" destination="gHw-RN-aXR" id="TEq-T5-k8r"/>
                                 </connections>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vuZ-wh-71v">
+                                <rect key="frame" x="0.0" y="378" width="375" height="400"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="gHw-RN-aXR" id="enT-Xo-OXQ"/>
+                                    <outlet property="delegate" destination="gHw-RN-aXR" id="EH5-ND-v87"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="0O1-cG-0y3" firstAttribute="top" secondItem="N6t-2k-ceT" secondAttribute="bottom" id="2zG-a0-yco"/>
-                            <constraint firstItem="0O1-cG-0y3" firstAttribute="bottom" secondItem="3CI-AS-mIc" secondAttribute="bottom" id="4Fa-NH-wt7"/>
                             <constraint firstItem="N6t-2k-ceT" firstAttribute="leading" secondItem="0O1-cG-0y3" secondAttribute="leading" id="6Me-mI-mzh"/>
                             <constraint firstItem="N6t-2k-ceT" firstAttribute="top" secondItem="3CI-AS-mIc" secondAttribute="top" id="9Re-D9-voT"/>
+                            <constraint firstItem="3CI-AS-mIc" firstAttribute="trailing" secondItem="vuZ-wh-71v" secondAttribute="trailing" id="CDB-yh-njD"/>
                             <constraint firstItem="N6t-2k-ceT" firstAttribute="leading" secondItem="CRt-AP-3h1" secondAttribute="leading" id="Gbx-ve-Urv"/>
                             <constraint firstAttribute="trailing" secondItem="N6t-2k-ceT" secondAttribute="trailing" id="Jgt-kf-DTr"/>
+                            <constraint firstItem="3CI-AS-mIc" firstAttribute="bottom" secondItem="vuZ-wh-71v" secondAttribute="bottom" id="kEL-lY-RvH"/>
                             <constraint firstItem="N6t-2k-ceT" firstAttribute="trailing" secondItem="0O1-cG-0y3" secondAttribute="trailing" id="lqL-Fd-UbT"/>
+                            <constraint firstItem="vuZ-wh-71v" firstAttribute="top" secondItem="0O1-cG-0y3" secondAttribute="bottom" id="si2-5V-CtW"/>
+                            <constraint firstItem="vuZ-wh-71v" firstAttribute="leading" secondItem="3CI-AS-mIc" secondAttribute="leading" id="yoc-pd-p2G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3CI-AS-mIc"/>
                     </view>
@@ -71,11 +85,21 @@
                     <connections>
                         <outlet property="calendarMenuView" destination="N6t-2k-ceT" id="y5g-5L-dA7"/>
                         <outlet property="calendarView" destination="0O1-cG-0y3" id="7Gc-Fb-5Vx"/>
+                        <outlet property="tableView" destination="vuZ-wh-71v" id="cbp-yc-hfL"/>
+                        <segue destination="SLx-0l-eg6" kind="custom" identifier="eventDetail" customClass="DeckSegue" customModule="DeckTransition" id="T2p-aZ-E9n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vEr-Pl-Y5t" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1743.2" y="1420.8395802098951"/>
+        </scene>
+        <!--EventDetail-->
+        <scene sceneID="5AU-az-Zch">
+            <objects>
+                <viewControllerPlaceholder storyboardName="EventDetail" id="SLx-0l-eg6" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IN1-9B-eAD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-991" y="1420"/>
         </scene>
     </scenes>
     <resources>
