Add calendarViewController to tabbar (#15)
:sparkles: Add calendar tab and show event detail from calendar

* Refactor event predicate logics

* Implement dotMarker related delegates

* Add test for tabbar

* Rename `JsonParsingTests` to `CalendarAPITests` and add event(on:) test

--- a/ThaiTechEventsCalendar/Storyboards/Settings.storyboard
+++ b/ThaiTechEventsCalendar/Storyboards/Settings.storyboard
@@ -21,6 +21,16 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BNc-ds-8Qa">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SettingCell" id="mTv-np-8Sm">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mTv-np-8Sm" id="BI6-KO-WZI">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -33,7 +43,7 @@
                         <viewLayoutGuide key="safeArea" id="zAA-FN-qiP"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="settings" id="i7p-kG-SRZ"/>
-                    <navigationItem key="navigationItem" id="QYI-ni-xf5"/>
+                    <navigationItem key="navigationItem" title="Settings" id="QYI-ni-xf5"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EE4-uE-ccv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
