--- a/ThaiTechEventsCalendar/Storyboards/Base.lproj/Main.storyboard
+++ b/ThaiTechEventsCalendar/Storyboards/Base.lproj/Main.storyboard
@@ -41,6 +41,7 @@
                     <connections>
                         <segue destination="lcq-jv-yKf" kind="relationship" relationship="viewControllers" id="D50-Tm-OVL"/>
                         <segue destination="5KN-Yi-qeb" kind="relationship" relationship="viewControllers" id="Fuo-CT-SwO"/>
+                        <segue destination="g9i-54-Ho1" kind="relationship" relationship="viewControllers" id="ILV-s3-DTB"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gPi-Og-ifm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -128,6 +129,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mbI-jy-0DG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1985" y="1157"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="wTp-ot-W5r">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Search" id="g9i-54-Ho1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="nvW-zI-3Z3"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iVO-mL-ZB2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1754" y="1684"/>
         </scene>
     </scenes>
     <resources>
